--- a/src/app.css
+++ b/src/app.css
@@ -5,17 +5,16 @@
 	--color-accent: #2b2d36;
 	--color-primary: #5d6f58;
 	--color-secondary: #f2eeef;
-}
 
-:root.dark {
-	--color-text: #f2f2f2;
-	--color-bg: #0d0d0d;
-	--color-bg-shade: #252525;
-	--color-accent: #2b2d36;
-	--color-primary: #5d6f58;
-	--color-secondary: #f2eeef;
+	@media (prefers-color-scheme: dark) {
+		--color-text: #f2f2f2;
+		--color-bg: #0d0d0d;
+		--color-bg-shade: #252525;
+		--color-accent: #2b2d36;
+		--color-primary: #5d6f58;
+		--color-secondary: #f2eeef;
+	}
 }
-
 .primary {
 	background-color: var(--color-primary);
 }
@@ -30,7 +29,7 @@
 
 body {
 	background-color: var(--color-bg);
-  color: var(--color-text);
+	color: var(--color-text);
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
 		'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -63,6 +62,11 @@ a {
 	text-decoration: none;
 }
 
-a:hover, a:active, button:hover, button:active {
-	transform: translateY(-1px);
+button,
+a {
+	&:hover,
+	&:focus,
+	&:active {
+		transform: translateY(-1px);
+	}
 }
